--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -70,6 +70,9 @@
                             <a href="{{ url_for('add_faq') }}" class="btn btn-outline-info btn-sm">
                                 <i class="fas fa-question"></i> Add FAQ
                             </a>
+                            <a href="{{ url_for('add_resource') }}" class="btn btn-outline-warning btn-sm">
+                                <i class="fas fa-upload"></i> Upload Resource
+                            </a>
                             {% if current_user.is_admin %}
                             <a href="{{ url_for('admin_alumni') }}" class="btn btn-outline-warning btn-sm">
                                 <i class="fas fa-users"></i> Manage Alumni
